fixed vertical alignment

--- a/saltgui/static/stylesheets/page.css
+++ b/saltgui/static/stylesheets/page.css
@@ -68,7 +68,7 @@ table tr th {
 
 table tr td {
   padding-right: 20px;
-  vertical-align: top;
+  vertical-align: middle;
   padding-top: 5px;
   padding-bottom: 5px;
   white-space: nowrap;
